--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+
+    <!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css"> -->
     
 
 </head>
@@ -22,7 +24,7 @@
 
     <header class="header">
         <div class="header__one">
-            <div class="header__one-item container flex flex-jc-sb">
+            <div class="header__one-item container flex flex-wrap flex-jc-sb">
                 <div>
                     <p>Best Wordpress Theme Ever</p>
                 </div>
@@ -41,7 +43,7 @@
                 
                 <h3 class="text">construct</h3>
 
-                <ul class="flex">
+                <ul class="flex flex-wrap hide-for-mobile">
                     <li><a href="#">home</a></li>
                     <li><a href="#">project</a></li>
                     <li><a href="#">service</a></li>
@@ -72,10 +74,68 @@
 
     </section>
 
-    <section>
+    <section class="service">
         <div class="container">
-            <div class="test">
-                <div class="inner"></div>
+            <ul class="nav flex flex-wrap">
+                <li>
+                    <a href="#">building</a>
+                    <div class="inner"></div>
+                </li>
+                <li>
+                    <a href="#">construction</a>
+                    <div class="inner"></div>
+                </li>
+                <li>
+                    <a href="#">isolation</a>
+                    <div class="inner"></div>
+                </li>
+                <li>
+                    <a href="#">painting</a>
+                    <div class="inner"></div>
+
+                </li>
+                <li>
+                    <a href="#">electricity</a>
+                    <div class="inner"></div>
+
+                </li>
+                <li>
+                    <a href="#">others</a>
+                    <div class="inner"></div>
+                </li>
+            </ul>
+
+            <div class="service__two flex">
+                <div>
+                    <div class="heading-text">
+                        <h2>we develop Building</h2>
+                        <h1>Building a New Green House</h1>
+                    </div>
+                    <p>We aim to eliminate the task of dividing your project between different architecture and construction company. <br> <br> We are a company that offers design and build services for you from initial sketches to the final construction. </p>
+
+                    <ul class="flex flex-wrap">
+                        <li>
+                            <i class="far fa-file-alt"></i>
+                            1.Plan
+                        </li>
+                        <li>
+                            <i class="icon fas fa-pencil-alt"></i>
+                            2.Design
+                        </li>
+                        <li>
+                            <i class="icon fas fa-city"></i>
+                            3.Delivery
+                        </li>
+                    </ul>
+
+                    <a class="btn" href="#">contact us</a>
+                </div>
+                <div>
+
+                    <img class="top-img" src="./app/img/img412x374.jpg" alt="" srcset="">
+                    <img class="bottom-img" src="./app/img/img208x175.jpg" alt="" srcset="">
+
+                </div>
             </div>
         </div>
     </section>
