--- a/index.html
+++ b/index.html
@@ -140,5 +140,20 @@
         </div>
     </section>
 
+    <section class="about">
+        <div class="container">
+            <div class="about__one flex flex-wrap flex-jc-sb flex-ai-c">
+                <div></div>
+                <div>
+                    <h2>Get Your Free Consultant</h2>
+                    <p>We are a company that offers design and build services for you from initial sketches to the final construction. </p>
+                </div>
+                <div>
+                    <a class="btn" href="#">contact us</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
