--- a/index.html
+++ b/index.html
@@ -152,7 +152,57 @@
                     <a class="btn" href="#">contact us</a>
                 </div>
             </div>
+            <div class="about__two">
+                <div class="head_text">
+                    <p>What other say’s</p>
+                    <h2>Testimonial</h2>
+                </div>
+
+                <div class="info flex flex-wrap">
+                    <div>
+                        <div class="card1">
+                            <img src="./app/img/img70x62.jpg" alt="image">
+                            <h3>John Doe</h3>
+                            <p>Lorem ipsum dolor sit amet, onsectetur adipiscing elit. Quisque nec erat erat. er blandit, nulla quis fermentum</p>
+
+                            <div class="arrow"></div>
+                        </div>
+
+                        <div class="card2">
+                            <img src="./app/img/img70x62.jpg" alt="image">
+                            <h3>John Doe</h3>
+                            <p>Lorem ipsum dolor sit amet, onsectetur adipiscing elit. Quisque nec erat erat. er blandit, nulla quis fermentum</p>
+                            <div class="arrow"></div>
+
+                        </div>
+                    </div>
+                    <div class="mobile">
+                        <img src="./app/img/mobile.png" alt="mobile">
+                    </div>
+                    <div>
+
+                        <div class="card3">
+                            <img src="./app/img/img70x62.jpg" alt="image">
+                            <h3>John Doe</h3>
+                            <p>Lorem ipsum dolor sit amet, onsectetur adipiscing elit. Quisque nec erat erat. er blandit, nulla quis fermentum</p>
+                            <div class="arrow"></div>
+
+                        </div>
+
+                        <div class="card4">
+                            <img src="./app/img/img70x62.jpg" alt="image">
+                            <h3>John Doe</h3>
+                            <p>Lorem ipsum dolor sit amet, onsectetur adipiscing elit. Quisque nec erat erat. er blandit, nulla quis fermentum</p>
+                            <div class="arrow"></div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
         </div>
+
+        
     </section>
 
 </body>
