--- a/index.html
+++ b/index.html
@@ -200,9 +200,41 @@
                     </div>
                 </div>
             </div>
-        </div>
 
-        
+        </div>
+    </section>
+
+    <section class="subscribe">
+        <div class="container">
+            <div class="subscribe__one flex flex-wrap">
+                <div>
+                    <img class="scrue1" src="./app/img/scrue.png" alt="">
+                    <p>image <br> 467 x 372</p>
+                </div>
+                <div>
+                    <img class="scrue2" src="./app/img/scrue.png" alt="">
+
+                    <h2>PROVIDING PERSONALIZED AND HIGH  QUALITY SERVICES.</h2>
+                    <p>Lorem ipsum dolor sit amet, onsectetur adipiscing elit. Quisque nec erat erat. er blandit, nulla quis fermentumLorem ipsum dolor sit amet, onsectetur adipiscing elit. Quisque nec erat erat. er blandit, nulla quis</p>
+
+                    <a href="#">contact us</a>
+                </div>
+            </div>
+
+            <div class="subscribe__two flex flex-wrap flex-ai-c">
+                <div>
+                    <h3>Like our work? Receive our email newsletter</h3>
+                    <form action="#" method="POST">
+                        <label for="email">My email ID is </label>
+                        <input class="email" type="email" name="email" id="email">
+                        <input class="submit" type="submit" value="Subscribe">
+                    </form>
+                </div>
+                <div>
+                    <img src="./app/img/img442x538.png" alt="people">
+                </div>
+            </div>
+        </div>
     </section>
 
 </body>
