--- a/index.html
+++ b/index.html
@@ -237,5 +237,47 @@
         </div>
     </section>
 
+    <section class="client">
+        <div class="container">
+            <div class="client__heading">
+                <p>Checkout</p>
+                <h2>Our Client</h2>
+            </div>
+            <div class="image flex flex-wrap flex-jc-sa">
+                <img src="./app/img/envato.jpg" alt="envato">
+                <img src="./app/img/envato.jpg" alt="envato">
+                <img src="./app/img/envato.jpg" alt="envato">
+                <img src="./app/img/envato.jpg" alt="envato">
+                <img src="./app/img/envato.jpg" alt="envato">
+            </div>
+
+            <div class="toggle flex flex-jc-c">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer">
+        <div class="container">
+            <div class="footer__one flex flex-wrap flex-jc-sb">
+                <div>
+                    <img src="./app/img/axe.png" alt="axe">
+                    <h2>construct</h2>
+                    <p>Lorem ipsum dolor sit amet, onsectetur adipiscing elit. Quisque nec erat erat. er blandit, nulla quis fermentumLorem ipsum dolor sit amet, onsectetur adipiscing elit. </p>
+
+                    <ul class="icon flex">
+                        <li><i class="fab fa-facebook-f"></i></li>
+                        <li><i class="fab fa-twitter"></i></li>
+                        <li><i class="fab fa-google-plus-g"></i></li>
+                    </ul>
+                </div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
