--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <div class="footer__one flex flex-wrap flex-jc-sb">
                 <div>
                     <img src="./app/img/axe.png" alt="axe">
-                    <h2>construct</h2>
+                    <h4>construct</h4>
                     <p>Lorem ipsum dolor sit amet, onsectetur adipiscing elit. Quisque nec erat erat. er blandit, nulla quis fermentumLorem ipsum dolor sit amet, onsectetur adipiscing elit. </p>
 
                     <ul class="icon flex">
@@ -273,8 +273,42 @@
                         <li><i class="fab fa-google-plus-g"></i></li>
                     </ul>
                 </div>
-                <div></div>
-                <div></div>
+                <div>
+                    <h4>Quick Links</h4>
+                    <div class="flex flex-jc-sb">
+                        <ul>
+                            <li>Home</li>
+                            <li>Projects</li>
+                            <li>What we do</li>
+                        </ul>
+                        <ul>
+                            <li>About us</li>
+                            <li>Blog</li>
+                            <li>Contact Us</li>
+                        </ul>
+                    </div>
+                    
+                </div>
+                <div>
+                    <h4>Company Info</h4>
+                    <ul>
+                        <li class="flex">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <p>
+                                227 Marion Street <br>
+                                Columbia, SC 29201
+                            </p>
+                            
+                        </li>
+                        <li class="flex">
+                            <i class="fas fa-phone-alt"></i>
+                            <p>
+                                1-888-123-4567 <br>
+                                info@construct.com
+                            </p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
