--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Header Start -->
     <header class="header">
-        <div class="header__one">
+        <div class="header__one hide-for-mobile">
             <div class="header__one-item container flex flex-wrap flex-jc-sb">
                 <div>
                     <p>Best Wordpress Theme Ever</p>
@@ -53,7 +53,7 @@
                     <li><a href="#">contact</a></li>
                 </ul>
 
-                <a class="btn" href="#">inquiry now</a>
+                <a class="btn hide-for-mobile" href="#">inquiry now</a>
 
             </div>
         </div>
@@ -78,7 +78,7 @@
     <!-- Service Start -->
     <section class="service">
         <div class="container">
-            <ul class="nav flex flex-wrap">
+            <ul class="nav flex flex-wrap flex-jc-sb">
                 <li>
                     <a href="#">building</a>
                     <div class="inner"></div>
@@ -107,7 +107,7 @@
                 </li>
             </ul>
 
-            <div class="service__two flex">
+            <div class="service__two flex flex-wrap">
                 <div>
                     <div class="heading-text">
                         <h2>we develop Building</h2>
@@ -164,7 +164,7 @@
 
             <div class="project__two flex flex-wrap flex-jc-sb">
                 <div class="menu">
-                      <ul>
+                      <ul class="hide-for-mobile">
                           <li>
                             <i class="icon fas fa-city"></i>
                             <p>Home</p>
@@ -270,13 +270,13 @@
     <!-- About Start -->
     <section class="about">
         <div class="container">
-            <div class="about__one flex flex-wrap flex-jc-sb flex-ai-c">
-                <div></div>
-                <div>
+            <div class="about__one flex flex-wrap flex-jc-sb flex-ai-c ">
+                <div class="hide-for-mobile"></div>
+                <div class="hide-for-mobile">
                     <h2>Get Your Free Consultant</h2>
                     <p>We are a company that offers design and build services for you from initial sketches to the final construction. </p>
                 </div>
-                <div>
+                <div class="hide-for-mobile">
                     <a class="btn" href="#">contact us</a>
                 </div>
             </div>
@@ -337,7 +337,7 @@
     <section class="subscribe">
         <div class="container">
             <div class="subscribe__one flex flex-wrap">
-                <div>
+                <div class="hide-for-mobile">
                     <img class="scrue1" src="./app/img/scrue.png" alt="">
                     <p>image <br> 467 x 372</p>
                 </div>
@@ -445,7 +445,7 @@
                 </div>
             </div>
 
-            <div class="footer__three">
+            <div class="footer__two">
                 <p>© Copyright 2015. by construct. All rights reserved.</p>
             </div>
         </div>
