header navbar modified

--- a/index.html
+++ b/index.html
@@ -37,24 +37,27 @@
         </div>
 
         <div class="header__two">
-            <div class="container flex">
-                <a class="logo" href="#">
-                    <img src="./app/img/axe.png" alt="logo">
-                </a>
-                
-                <h3 class="text">construct</h3>
-
-                <ul class="flex flex-wrap hide-for-mobile">
-                    <li><a href="#">home</a></li>
-                    <li><a href="#">project</a></li>
-                    <li><a href="#">service</a></li>
-                    <li><a href="#">blog</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">contact</a></li>
-                </ul>
-
-                <a class="btn hide-for-mobile" href="#">inquiry now</a>
-
+            <div class="container">
+                <div class="navbar flex flex-wrap flex-jc-sb">
+                    <div class="flex flex-jc-sb">
+                        <a class="logo" href="#">
+                            <img src="./app/img/axe.png" alt="logo">
+                        </a>
+                        <h3 class="text">construct</h3>
+                    </div>
+    
+                    <div>
+                        <ul class="flex flex-wrap flex-jc-sb hide-for-mobile">
+                            <li><a href="#">home</a></li>
+                            <li><a href="#">project</a></li>
+                            <li><a href="#">service</a></li>
+                            <li><a href="#">blog</a></li>
+                            <li><a href="#">about</a></li>
+                            <li><a href="#">contact</a></li>
+                            <li><a href="#">inquiry now</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
