--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="header__two">
             <div class="container">
                 <div class="navbar flex flex-wrap flex-jc-sb">
-                    <div class="flex flex-jc-sb">
+                    <div class="flex">
                         <a class="logo" href="#">
                             <img src="./app/img/axe.png" alt="logo">
                         </a>
@@ -81,7 +81,7 @@
     <!-- Service Start -->
     <section class="service">
         <div class="container">
-            <ul class="nav flex flex-wrap flex-jc-sb">
+            <ul class="nav flex flex-wrap flex-jc-sa">
                 <li>
                     <a href="#">building</a>
                     <div class="inner"></div>
