--- a/index.html
+++ b/index.html
@@ -57,6 +57,25 @@
                             <li><a href="#">inquiry now</a></li>
                         </ul>
                     </div>
+
+                    <!-- Mobile Menu Start -->
+
+                    <div id="myNav" class="overlay hide-for-desktop">
+                        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                        <div class="overlay-content">
+                          <a href="#">About</a>
+                          <a href="#">Services</a>
+                          <a href="#">Clients</a>
+                          <a href="#">Contact</a>
+                        </div>
+                    </div>
+
+                    <div class="menu" onclick="openNav()">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <!-- Mobile Menu End -->
                 </div>
             </div>
         </div>
