mobile nav added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         </div>
                     </div>
 
-                    <div class="menu" onclick="openNav()">
+                    <div class="menu hide-for-desktop" onclick="openNav()">
                         <div></div>
                         <div></div>
                         <div></div>
