--- a/index.html
+++ b/index.html
@@ -189,28 +189,28 @@
                       <ul class="hide-for-mobile">
                           <li>
                             <i class="icon fas fa-city"></i>
-                            <p>Home</p>
+                            <p>building</p>
                           </li>
                           <li>
-                            <i class="icon fas fa-city"></i>
-                            <p>Home</p>
+                            <i class="fas fa-brush"></i>
+                            <p>Paint</p>
 
                           </li>
                           <li>
-                            <i class="icon fas fa-city"></i>
-                            <p>Home</p>
+                            <i class="fas fa-hard-hat"></i>
+                            <p>construct</p>
                           </li>
                           <li>
-                            <i class="icon fas fa-city"></i>
-                            <p>Home</p>
+                            <i class="fas fa-faucet"></i>
+                            <p>Water</p>
                           </li>
                           <li>
-                            <i class="icon fas fa-city"></i>
-                            <p>Home</p>
+                            <i class="fas fa-bolt"></i>
+                            <p>electricity</p>
                           </li>
                           <li>
-                            <i class="icon fas fa-city"></i>
-                            <p>Home</p>
+                            <i class="fas fa-truck-loading"></i>
+                            <p>delivery</p>
                           </li>
                       </ul>
                 </div>
@@ -424,23 +424,23 @@
                     <p>Lorem ipsum dolor sit amet, onsectetur adipiscing elit. Quisque nec erat erat. er blandit, nulla quis fermentumLorem ipsum dolor sit amet, onsectetur adipiscing elit. </p>
 
                     <ul class="icon flex">
-                        <li><i class="fab fa-facebook-f"></i></li>
-                        <li><i class="fab fa-twitter"></i></li>
-                        <li><i class="fab fa-google-plus-g"></i></li>
+                        <li><a href="https://facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://mail.google.com/" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
                     </ul>
                 </div>
                 <div>
                     <h4>Quick Links</h4>
                     <div class="flex flex-jc-sb">
                         <ul>
-                            <li>Home</li>
-                            <li>Projects</li>
-                            <li>What we do</li>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Projects</a></li>
+                            <li><a href="#">What we do</a></li>
                         </ul>
                         <ul>
-                            <li>About us</li>
-                            <li>Blog</li>
-                            <li>Contact Us</li>
+                            <li><a href="#">About us</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contact Us</a></li>
                         </ul>
                     </div>
                     
