--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONSTRUCT</title>
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./app/img/favicon2.png" type="image/x-icon">
     
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
