--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <div class="header__two">
+        <div id="topNav" class="header__two" onscroll="myFunction()">
             <div class="container">
                 <div class="navbar flex flex-wrap flex-jc-sb">
                     <div class="flex">
@@ -104,7 +104,7 @@
     <!-- Banner End -->
 
     <!-- Service Start -->
-    <section class="service">
+    <section id="#service" class="service">
         <div class="container">
             <ul class="nav flex flex-wrap flex-jc-sa">
                 <li>
@@ -479,6 +479,9 @@
         </div>
     </section>
     <!-- Footer End -->
+
+    <!-- Jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <!-- Javascript -->
     <script src="./app/js/script.js"></script>
