--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <li><a href="#project">project</a></li>
                             <li><a href="#service">service</a></li>
                             <li><a href="#">blog</a></li>
-                            <li><a href="#">about</a></li>
+                            <li><a href="#about">about</a></li>
                             <li><a href="#contact">contact</a></li>
                             <li><a href="#">inquiry now</a></li>
                         </ul>
@@ -104,7 +104,7 @@
     <!-- Banner End -->
 
     <!-- Service Start -->
-    <section id="#service" class="service">
+    <section id="service" class="service">
         <div class="container">
             <ul class="nav flex flex-wrap flex-jc-sa">
                 <li>
@@ -296,7 +296,7 @@
     <!-- Project End -->
 
     <!-- About Start -->
-    <section class="about">
+    <section id="about" class="about">
         <div class="container">
             <div class="about__one flex flex-wrap flex-jc-sb flex-ai-c ">
                 <div class="hide-for-mobile"></div>
@@ -421,7 +421,7 @@
     <!-- Client End -->
 
     <!-- Footer Start -->
-    <section class="footer">
+    <section id="contact" class="footer">
         <div class="container">
             <div class="footer__one flex flex-wrap flex-jc-sb">
                 <div>
