--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div id="myNav" class="overlay hide-for-desktop">
                         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                         <div class="overlay-content">
-                            <a onclick="closeNav()" href="/">home</a>
+                            <a onclick="closeNav()" href="#">home</a>
                             <a onclick="closeNav()" href="#">project</a>
                             <a onclick="closeNav()" href="#">service</a>
                             <a onclick="closeNav()" href="#">blog</a>
@@ -382,7 +382,7 @@
             <div class="subscribe__two flex flex-wrap flex-ai-c">
                 <div>
                     <h3>Like our work? Receive our email newsletter</h3>
-                    <form action="#" method="POST">
+                    <form action="" method="POST">
                         <label for="email">My email ID is </label>
                         <input class="email" type="email" name="email" id="email">
                         <input class="submit" type="submit" value="Subscribe">
